--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/mobile.css">
     <script src="https://kit.fontawesome.com/e5bc88f7ae.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="top-header">
-            <div class="hamburger-menu">
-                <div class="hamburger-btn"></div>
+    <header class="width flex align-vert">
+        <div class="top-header flex row center-vert width">
+            <div class="hamburger-menu no-desktop">
+                <div class="hamburger-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
             <div class="logo">
                 <h1>I LOVE CODE</h1>
             </div>
             <nav>
-                <ul>
+                <ul class="flex row">
                     <li>Om mig</li>
                     <li>Studier</li>
                     <li>Jobb</li>
                     <li>Framtid</li>
                 </ul>
             </nav>
-            <div class="enlage-btn">
-
+            <div class="zoom-btn">
+                <i class="fas fa-font"></i>
+                <i class="fas fa-search-plus"></i>
+                <i class="fas fa-search-minus"></i>
             </div>
         </div>
-        <div class="mobile-menu">
-            <ul>
+        <div class="mobile-menu no-desktop width">
+            <ul class="flex column">
                 <li>Om mig</li>
                 <li>Studier</li>
                 <li>Jobb</li>
@@ -38,8 +43,8 @@
         </div>
     </header>
     <main>
-        <div class="text-container">
-            <h1>Lorem ipsum</h1>
+        <div class="text-container flex column">
+            <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi voluptas libero, esse sunt excepturi, expedita provident numquam officia blanditiis laborum quos aliquid ea officiis accusantium dolorem aut veritatis autem veniam.
             Nemo cum obcaecati ex sed cumque consequuntur necessitatibus exercitationem, animi repudiandae saepe totam tempore magnam aliquid dolore earum. Cum consequuntur ipsam provident sed aliquam veritatis deserunt velit fuga voluptatibus iure.
             Non, quis. Adipisci placeat natus accusamus ducimus quam incidunt non laborum rem, officia sapiente ut accusantium tenetur ex dolores molestias excepturi maiores, dolor nemo perferendis. Perferendis dolorum dicta aut quod.</p>
@@ -50,8 +55,8 @@
             Nemo cum obcaecati ex sed cumque consequuntur necessitatibus exercitationem, animi repudiandae saepe totam tempore magnam aliquid dolore earum. Cum consequuntur ipsam provident sed aliquam veritatis deserunt velit fuga voluptatibus iure.
             Non, quis. Adipisci placeat natus accusamus ducimus quam incidunt non laborum rem, officia sapiente ut accusantium tenetur ex dolores molestias excepturi maiores, dolor nemo perferendis. Perferendis dolorum dicta aut quod.</p>
         </div>
-        <div class="text-container">
-            <h1>Lorem ipsum</h1>
+        <div class="text-container flex column">
+            <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi voluptas libero, esse sunt excepturi, expedita provident numquam officia blanditiis laborum quos aliquid ea officiis accusantium dolorem aut veritatis autem veniam.
             Nemo cum obcaecati ex sed cumque consequuntur necessitatibus exercitationem, animi repudiandae saepe totam tempore magnam aliquid dolore earum. Cum consequuntur ipsam provident sed aliquam veritatis deserunt velit fuga voluptatibus iure.
             Non, quis. Adipisci placeat natus accusamus ducimus quam incidunt non laborum rem, officia sapiente ut accusantium tenetur ex dolores molestias excepturi maiores, dolor nemo perferendis. Perferendis dolorum dicta aut quod.</p>
@@ -62,8 +67,8 @@
             Nemo cum obcaecati ex sed cumque consequuntur necessitatibus exercitationem, animi repudiandae saepe totam tempore magnam aliquid dolore earum. Cum consequuntur ipsam provident sed aliquam veritatis deserunt velit fuga voluptatibus iure.
             Non, quis. Adipisci placeat natus accusamus ducimus quam incidunt non laborum rem, officia sapiente ut accusantium tenetur ex dolores molestias excepturi maiores, dolor nemo perferendis. Perferendis dolorum dicta aut quod.</p>
         </div>
-        <div class="text-container">
-            <h1>Lorem ipsum</h1>
+        <div class="text-container flex column">
+            <h2>Lorem ipsum</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi voluptas libero, esse sunt excepturi, expedita provident numquam officia blanditiis laborum quos aliquid ea officiis accusantium dolorem aut veritatis autem veniam.
             Nemo cum obcaecati ex sed cumque consequuntur necessitatibus exercitationem, animi repudiandae saepe totam tempore magnam aliquid dolore earum. Cum consequuntur ipsam provident sed aliquam veritatis deserunt velit fuga voluptatibus iure.
             Non, quis. Adipisci placeat natus accusamus ducimus quam incidunt non laborum rem, officia sapiente ut accusantium tenetur ex dolores molestias excepturi maiores, dolor nemo perferendis. Perferendis dolorum dicta aut quod.</p>
