--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/mobile.css">
     <script src="https://kit.fontawesome.com/e5bc88f7ae.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Practice Hamburger Menu | Nicklas Holmqvist</title>
 </head>
 <body>
     <header class="width flex align-vert" id="setHeight">
